# chemessence

./: CONTRIBUTING.md  README.md  pyproject.toml
docs/images/: example-amino-acid.png.old
src/metadata/: README.md  chemessence.md  chemessence.yml
src/notebooks/: CHEBI-Slimmer.ipynb
src/ontology/: Makefile  chemessence-idranges.owl  chemessence-odk.yaml  chemessence.Makefile
src/ontology/components/: ogco.dag  ogco.obo  ogco.owl
src/scripts/: update_repo.sh
src/sparql/: README.md  chemessence_terms.sparql  dc-properties-violation.sparql  iri-range-violation.sparql  label-with-iri-violation.sparql  owldef-self-reference-violation.sparql
